--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -441,6 +441,10 @@
       margin-top: 14px;
     }
 
+    .h1-r6 {
+      margin-left: 6%;
+    }
+
     .element {
       position: absolute;
       top: 110px;
@@ -1335,7 +1339,7 @@ section.horizontal .animation-wrap {
   font-family: 'NeueHaasDisplay-me';
   position: absolute;
   font-size: 10em;
-  opacity: 0.11;
+  opacity: 0.05;
   z-index: -1;
   transform: translate(-60px, -102px);
   line-height: 1;
@@ -1373,7 +1377,7 @@ section.horizontal .animation-wrap {
       font-family: 'NeueHaasDisplay-me';
       position: absolute;
       font-size: 5em;
-      opacity: 0.11;
+      opacity: 0.05;
       z-index: -1;
       transform: translate(-45px, -26px);
       line-height: 1;
@@ -1421,7 +1425,7 @@ section.horizontal .animation-wrap {
       font-family: 'NeueHaasDisplay-me';
       position: absolute;
       font-size: 10em;
-      opacity: 0.11;
+      opacity: 0.05;
       z-index: -1;
       transform: translate(-80px, -26px);
       line-height: 1;
@@ -1432,6 +1436,7 @@ section.horizontal .animation-wrap {
       font-size: 1.4em;
       line-height: 1.2;
       letter-spacing: 1.3px;
+      font-family: 'NeueHaasDisplay-me';
     }
 
     p {
@@ -1807,6 +1812,9 @@ section.horizontal .animation-wrap.to-left {
   align-items: center;
 }
 
+.right-align {
+  text-align: right;
+}
 
 // Mobile Quries
 @media only screen and (min-device-width: 320px) and (max-device-width: 812px) {
@@ -2152,7 +2160,7 @@ section.horizontal .animation-wrap.to-left {
       font-family: 'NeueHaasDisplay-me';
       position: absolute;
       font-size: 8em;
-      opacity: 0.11;
+      opacity: 0.05;
       z-index: -1;
       transform: translate(-20px, -62px);
       line-height: 1;
