--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -1572,10 +1572,10 @@
 
 .ar-work {
     display: block;
-    margin-right: 100px;
+    margin-right: 190px;
     -ms-flex-preferred-size: 40vw;
     flex-basis: 40vw;
-    min-width: 40vw;
+    min-width: 50vw;
     position: relative;
 }
 
@@ -1625,7 +1625,7 @@ body.dark .ar-work-cat,
 
 .recent-works-bg-text {
     position: absolute;
-    top: 0;
+    top: 43%;
     -webkit-transform: translateX(50%);
     -ms-transform: translateX(50%);
     transform: translateX(50%);
