--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -1609,12 +1609,12 @@ body.dark .ar-work-title,
 }
 
 .ar-work-cat {
-    margin-top: 10px;
+    margin-top: 20px;
     font-size: 18px;
-    letter-spacing: -0.02em;
-    padding-left: 20px;
-    color: rgba(25, 27, 29, .6);
-    font-family: 'NeueHaasDisplay-me';
+    letter-spacing: 0px;
+    padding-left: 2px;
+    color: rgba(25, 27, 29, 0.6);
+    font-family: 'Ageo';
 }
 
 body.dark .ar-work-cat,
