--- a/assets/resources/styles/less/modules/_header.less
+++ b/assets/resources/styles/less/modules/_header.less
@@ -223,7 +223,7 @@ header {
 
 .logo {
 	img {
-		width: 50px;
+		width: 35px;
 	}
 }
 
@@ -756,7 +756,7 @@ header {
 .Menu-socialsItem {
 	font-size: 12px;
 	line-height: 14px;
-	text-transform: uppercase
+	letter-spacing: 0.7px;
 }
 
 @media (max-width:1023px) {
