--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -201,7 +201,7 @@
     border: 0;
     border-radius: 0;
     outline: 0 !important;
-    font-family: 'Ageo';
+    font-family: 'Ageo-SemiBold';
     font-size: 0.9em;
     letter-spacing: 1px;
     line-height: inherit;
@@ -1536,7 +1536,7 @@ section.horizontal .animation-wrap.to-left {
       border-radius: 0;
       // opacity: 0;
       outline: 0 !important;
-      font-family: 'Ageo';
+      font-family: 'Ageo-SemiBold';
       font-size: 1em;
       letter-spacing: 1px;
       line-height: inherit;
@@ -1660,7 +1660,7 @@ section.horizontal .animation-wrap.to-left {
         border-radius: 0;
         // opacity: 0;
         outline: 0 !important;
-        font-family: 'Ageo';
+        font-family: 'Ageo-SemiBold';
         font-size: 1em;
         letter-spacing: 1px;
         line-height: inherit;
