--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -1889,7 +1889,7 @@ header {
   width: 50px;
 }
 .logo img {
-  width: 50px;
+  width: 35px;
 }
 @-webkit-keyframes scroll-left {
   0% {
@@ -2337,7 +2337,7 @@ header {
 .Menu-socialsItem {
   font-size: 12px;
   line-height: 14px;
-  text-transform: uppercase;
+  letter-spacing: 0.7px;
 }
 @media (max-width: 1023px) {
   .Menu-socialsItem {
@@ -5234,6 +5234,93 @@ header {
 .t-d3-fluid.cta a {
   color: #2b2b2b;
 }
+.t-d3-fluid.cta a:hover .wave {
+  -webkit-animation-name: wave-animation;
+          animation-name: wave-animation;
+  /* Refers to the name of your @keyframes element below */
+  -webkit-animation-duration: 2.5s;
+          animation-duration: 2.5s;
+  /* Change to speed up or slow down */
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  /* Never stop waving :) */
+  -webkit-transform-origin: 70% 70%;
+          transform-origin: 70% 70%;
+  /* Pivot around the bottom-left palm */
+  display: inline-block;
+}
+@-webkit-keyframes wave-animation {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  10% {
+    -webkit-transform: rotate(14deg);
+            transform: rotate(14deg);
+  }
+  /* The following five values can be played with to make the waving more or less extreme */
+  20% {
+    -webkit-transform: rotate(-8deg);
+            transform: rotate(-8deg);
+  }
+  30% {
+    -webkit-transform: rotate(14deg);
+            transform: rotate(14deg);
+  }
+  40% {
+    -webkit-transform: rotate(-4deg);
+            transform: rotate(-4deg);
+  }
+  50% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+  60% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  /* Reset for the last half to pause */
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+@keyframes wave-animation {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  10% {
+    -webkit-transform: rotate(14deg);
+            transform: rotate(14deg);
+  }
+  /* The following five values can be played with to make the waving more or less extreme */
+  20% {
+    -webkit-transform: rotate(-8deg);
+            transform: rotate(-8deg);
+  }
+  30% {
+    -webkit-transform: rotate(14deg);
+            transform: rotate(14deg);
+  }
+  40% {
+    -webkit-transform: rotate(-4deg);
+            transform: rotate(-4deg);
+  }
+  50% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+  60% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  /* Reset for the last half to pause */
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
 .w-inline-block {
   max-width: 100%;
   display: inline-block;
@@ -6591,6 +6678,7 @@ header {
   margin: 0px;
   font-size: 16px;
   letter-spacing: 1px;
+  color: #ffffff;
 }
 #project p a {
   color: #ffffff;
@@ -6847,6 +6935,9 @@ header {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+.spline_p {
+  font-family: 'Ageo';
 }
 .text_anim div,
 .text_anim h3,
@@ -8573,7 +8664,7 @@ header {
   border: 0;
   border-radius: 0;
   outline: 0 !important;
-  font-family: 'Ageo';
+  font-family: 'Ageo-SemiBold';
   font-size: 0.9em;
   letter-spacing: 1px;
   line-height: inherit;
@@ -9714,7 +9805,7 @@ section.horizontal .animation-wrap.to-left {
   border: 0;
   border-radius: 0;
   outline: 0 !important;
-  font-family: 'Ageo';
+  font-family: 'Ageo-SemiBold';
   font-size: 1em;
   letter-spacing: 1px;
   line-height: inherit;
@@ -9815,7 +9906,7 @@ section.horizontal .animation-wrap.to-left {
     border: 0;
     border-radius: 0;
     outline: 0 !important;
-    font-family: 'Ageo';
+    font-family: 'Ageo-SemiBold';
     font-size: 1em;
     letter-spacing: 1px;
     line-height: inherit;
@@ -12044,7 +12135,7 @@ section.horizontal .animation-wrap.to-left {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-right: 10px;
+  padding-right: 30px;
 }
 #footer .botom #animation-container #animation svg {
   vertical-align: middle;
@@ -12202,7 +12293,7 @@ section.horizontal .animation-wrap.to-left {
   height: auto;
   line-height: 1.7;
   opacity: 1;
-  margin-right: 60px;
+  margin-right: 48px;
   text-align: left;
 }
 #footer .footer-right .cb-outro-social-item .cb-outro-social-item-title {
@@ -14561,12 +14652,12 @@ body.dark .ar-work-title,
   color: #fff;
 }
 .ar-work-cat {
-  margin-top: 10px;
+  margin-top: 20px;
   font-size: 18px;
-  letter-spacing: -0.02em;
-  padding-left: 20px;
+  letter-spacing: 0px;
+  padding-left: 2px;
   color: rgba(25, 27, 29, 0.6);
-  font-family: 'NeueHaasDisplay-me';
+  font-family: 'Ageo';
 }
 body.dark .ar-work-cat,
 .a-recent-works.dark .ar-work-cat {
