--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -741,6 +741,54 @@
     a {
         color: #2b2b2b;
     }
+
+    a:hover .wave {
+        animation-name: wave-animation;
+        /* Refers to the name of your @keyframes element below */
+        animation-duration: 2.5s;
+        /* Change to speed up or slow down */
+        animation-iteration-count: infinite;
+        /* Never stop waving :) */
+        transform-origin: 70% 70%;
+        /* Pivot around the bottom-left palm */
+        display: inline-block;
+    }
+
+    @keyframes wave-animation {
+        0% {
+            transform: rotate(0.0deg)
+        }
+
+        10% {
+            transform: rotate(14.0deg)
+        }
+
+        /* The following five values can be played with to make the waving more or less extreme */
+        20% {
+            transform: rotate(-8.0deg)
+        }
+
+        30% {
+            transform: rotate(14.0deg)
+        }
+
+        40% {
+            transform: rotate(-4.0deg)
+        }
+
+        50% {
+            transform: rotate(10.0deg)
+        }
+
+        60% {
+            transform: rotate(0.0deg)
+        }
+
+        /* Reset for the last half to pause */
+        100% {
+            transform: rotate(0.0deg)
+        }
+    }
 }
 
 .w-inline-block {
@@ -2248,6 +2296,7 @@
     margin: 0px;
     font-size: 16px;
     letter-spacing: 1px;
+    color: #ffffff;
 
     a {
         color: #ffffff;
@@ -2547,6 +2596,10 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.spline_p {
+    font-family: 'Ageo';
 }
 
 .text_anim div {
