--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -2278,17 +2278,17 @@
 
 .next img.swipeimage {
     position: absolute;
-    width: 200px;
-    height: 200px;
-    top: -80px;
-    left: -360px;
-    transform: scale(0);
-    //   transform: scale(0.1);
+    width: 307px;
+    height: 230px;
+    top: -50px;
+    right: 0;
+    -webkit-transform: scale(1.4);
+    transform: scale(1.4);
+    -o-object-fit: cover;
     object-fit: cover;
     z-index: 9;
     opacity: 0;
     visibility: hidden;
-    //   transition: transform .7s cubic-bezier(.175,.885,.32,1.275),opacity .2s cubic-bezier(.215,.61,.355,1) .1s;
     pointer-events: none;
 }
 
@@ -2626,7 +2626,7 @@
 .is-inview .text_anim span {
     transform: translateY(0) skewY(0deg);
     transition: transform .8s ease-out;
-    transition-delay: .6s;
+    transition-delay: .4s;
 }
 
 .is-inview .text_anim.spline_p div:nth-child(2) span {
@@ -2767,7 +2767,6 @@
 #studio_p div.text_anim.spline_p,
 #filosofia div.text_anim.spline_p {
     padding-left: 0.25vw;
-    font-family: 'NeueHaasDisplay-roman';
     letter-spacing: 2px;
     margin-top: 50px;
     line-height: 2;
@@ -2852,6 +2851,7 @@
     position: absolute;
     margin: 0px;
     bottom: 0px;
+    font-family: 'NeueHaasDisplay-me';
     mix-blend-mode: multiply;
 }
 
@@ -2942,20 +2942,28 @@
     grid-column: 3 / 23;
 }
 
+#portf p,
+#colori p {
+    margin-top: 30px;
+    padding-left: 0;
+    font-size: calc(15px + 10 * ((100vw - 320px) / 1920));
+    line-height: calc(28px + 10 * ((100vw - 320px) / 1920));
+}
+
 .blocco h2 {
     color: var(--black);
-    margin: 0px;
     font-size: calc(50px + 10 * ((100vw - 320px) / 1920));
     line-height: calc(55px + 10 * ((100vw - 320px) / 1920));
-    margin-bottom: 50px;
+    font-family: 'NeueHaasDisplay-me';
+    letter-spacing: 1px;
     text-transform: uppercase;
 }
 
-.blocco div.spline_p {
+.blocco div p {
+    margin-top: 30px;
     padding-left: 0;
-    font-size: calc(18px + 10 * ((100vw - 320px) / 1920));
+    font-size: calc(15px + 10 * ((100vw - 320px) / 1920));
     line-height: calc(28px + 10 * ((100vw - 320px) / 1920));
-    color: var(--grey);
     padding-bottom: 150px;
 }
 
@@ -3049,7 +3057,6 @@
                 font-size: 14px;
                 letter-spacing: 1px;
                 letter-spacing: 1.2;
-                font-family: "NeueHaasDisplay-roman";
             }
 
             .hdn {
@@ -3280,7 +3287,8 @@
 
 /*####### next #######*/
 .next-project {
-    text-align: center;
+    background: #efefef;
+    text-align: left;
     height: 30.107143vw;
     max-height: 909px;
     display: -webkit-box;
@@ -3296,33 +3304,34 @@
 }
 
 .next-project__content {
-    width: 66.66666667vw;
+    width: 76.666667vw;
 }
 
 .txt--p5 {
-    font-size: 1.8em;
+    font-size: 1.2em;
     line-height: 1.66666667em;
-    letter-spacing: -.00555556em;
-    font-weight: 400;
+    letter-spacing: 0.4px;
     position: relative;
+    text-transform: capitalize;
 }
 
 .next-project__content .txt--p5 {
-    margin-bottom: 1.5em;
+    margin-bottom: 0em;
 }
 
 .title--title2 {
     position: relative;
-    font-family: 'Bebas Neue';
+    font-family: 'NeueHaasDisplay-me';
     font-size: 6em;
-    line-height: .94166667em;
-    letter-spacing: -.01783333em;
+    line-height: 0.94166667em;
+    letter-spacing: 3px;
     font-weight: 600;
+    color: #2b2b2b;
 }
 
 .next-project__content a {
     display: inline-block;
-    text-align: center;
+    text-align: left;
     position: relative;
     padding-bottom: .3em;
 
@@ -3330,7 +3339,7 @@
     span {
         display: block;
         color: transparent;
-        color: #c7c7c7;
+        color: #2b2b2b;
     }
 
     span::after {
@@ -3366,24 +3375,24 @@
 
 .next-project__content a svg {
     position: absolute;
-    bottom: -62px;
-    width: 62px;
-    left: 50%;
-    margin-left: -31px;
+    top: 0;
+    width:
+        62px;
+    right: 0;
+    stroke: #2b2b2b;
+    margin-left: 0;
     -webkit-transform-origin: center;
     transform-origin: center;
-    -webkit-transform: translateY(50px) rotate(-45deg);
-    transform: translateY(50px) rotate(-45deg);
-    opacity: 0;
-    -webkit-transition: transform .4s cubic-bezier(.18, 0, .16, 1), opacity .4s cubic-bezier(.18, 0, .16, 1);
-    -webkit-transition: opacity .4s cubic-bezier(.18, 0, .16, 1), -webkit-transform .4s cubic-bezier(.18, 0, .16, 1);
-    transition: opacity .4s cubic-bezier(.18, 0, .16, 1), -webkit-transform .4s cubic-bezier(.18, 0, .16, 1);
-    transition: transform .4s cubic-bezier(.18, 0, .16, 1), opacity .4s cubic-bezier(.18, 0, .16, 1);
-    transition: transform .4s cubic-bezier(.18, 0, .16, 1), opacity .4s cubic-bezier(.18, 0, .16, 1), -webkit-transform .4s cubic-bezier(.18, 0, .16, 1);
+    -webkit-transform: translateY(0px) rotate(-45deg);
+    transform: translateY(0px) rotate(-45deg);
+    opacity: 1;
+
+    transition: opacity .2s cubic-bezier(.18, 0, .16, 1), -webkit-transform .2s cubic-bezier(.18, 0, .16, 1);
+    transition: transform .2s cubic-bezier(.18, 0, .16, 1), opacity .2s cubic-bezier(.18, 0, .16, 1);
 }
 
 .next-project__content a:hover svg {
-    opacity: 1;
+    opacity: 0;
     -webkit-transform: translateY(0) rotate(0deg);
     transform: translateY(0) rotate(0deg);
 }
