--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -6661,12 +6661,11 @@ header {
 }
 .next img.swipeimage {
   position: absolute;
-  width: 307px;
-  height: 230px;
-  top: -50px;
+  width: 400px;
+  top: -110px;
   right: 0;
-  -webkit-transform: scale(1.4);
-  transform: scale(1.4);
+  -webkit-transform: scale(2.4);
+  transform: scale(2.4);
   -o-object-fit: cover;
   object-fit: cover;
   z-index: 9;
@@ -7557,12 +7556,13 @@ header {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  padding-bottom: 5vw;
+  padding-bottom: 0vw;
+  position: relative;
 }
 .next-project__content {
   width: 76.666667vw;
@@ -7580,11 +7580,11 @@ header {
 .title--title2 {
   position: relative;
   font-family: 'NeueHaasDisplay-me';
-  font-size: 6em;
+  font-size: 3.5em;
   line-height: 0.94166667em;
-  letter-spacing: 3px;
-  font-weight: 600;
+  letter-spacing: 2px;
   color: #2b2b2b;
+  text-transform: uppercase;
 }
 .next-project__content a {
   display: inline-block;
@@ -7595,7 +7595,7 @@ header {
 .next-project__content a span {
   display: block;
   color: transparent;
-  color: #2b2b2b;
+  color: #2b2b2b5e;
 }
 .next-project__content a span::after {
   content: attr(data-label);
@@ -9525,11 +9525,11 @@ header {
   padding-right: 4.6%;
 }
 .details-f .cont p {
-  font-size: 0.9em;
+  font-size: 1.1em;
   font-family: 'Ageo';
   color: #000000;
   line-height: 1.8;
-  letter-spacing: 2px;
+  letter-spacing: 0px;
 }
 .image-div {
   width: 70%;
@@ -12987,9 +12987,13 @@ section.horizontal .animation-wrap.to-left {
 }
 .recent-post .bl-main {
   position: relative;
-  width: 58%;
+  width: 48%;
   padding: 0 0 60px;
   overflow: hidden;
+}
+.recent-post a {
+  width: 50%;
+  padding-left: 20px;
 }
 .recent-post .pr-thum a {
   position: relative;
@@ -13000,8 +13004,8 @@ section.horizontal .animation-wrap.to-left {
   z-index: 3;
 }
 .recent-post .p-prj-caption {
-  width: 40%;
-  padding-left: 17px;
+  width: 100%;
+  padding-left: 0px;
   pointer-events: none;
   -webkit-transform: translateZ(100px);
   transform: translateZ(100px);
