--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -2278,12 +2278,11 @@
 
 .next img.swipeimage {
     position: absolute;
-    width: 307px;
-    height: 230px;
-    top: -50px;
+    width: 400px;
+    top: -110px;
     right: 0;
-    -webkit-transform: scale(1.4);
-    transform: scale(1.4);
+    -webkit-transform: scale(2.4);
+    transform: scale(2.4);
     -o-object-fit: cover;
     object-fit: cover;
     z-index: 9;
@@ -3291,16 +3290,13 @@
     text-align: left;
     height: 30.107143vw;
     max-height: 909px;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    padding-bottom: 5vw;
+    padding-bottom: 0vw;
+    position: relative;
 }
 
 .next-project__content {
@@ -3322,11 +3318,11 @@
 .title--title2 {
     position: relative;
     font-family: 'NeueHaasDisplay-me';
-    font-size: 6em;
+    font-size: 3.5em;
     line-height: 0.94166667em;
-    letter-spacing: 3px;
-    font-weight: 600;
+    letter-spacing: 2px;
     color: #2b2b2b;
+    text-transform: uppercase;
 }
 
 .next-project__content a {
@@ -3339,7 +3335,7 @@
     span {
         display: block;
         color: transparent;
-        color: #2b2b2b;
+        color: #2b2b2b5e;
     }
 
     span::after {
