--- a/assets/resources/styles/less/modules/_blog.less
+++ b/assets/resources/styles/less/modules/_blog.less
@@ -614,9 +614,14 @@
 
     .bl-main {
         position: relative;
-        width: 58%;
+        width: 48%;
         padding: 0 0 60px;
         overflow: hidden;
+    }
+
+    a {
+        width: 50%;
+        padding-left: 20px;
     }
 
     .pr-thum a {
@@ -630,9 +635,9 @@
     }
 
     .p-prj-caption {
-        width: 40%;
+        width: 100%;
         padding-left:
-            17px;
+            0px;
         pointer-events: none;
         -webkit-transform: translateZ(100px);
         transform: translateZ(100px);
