--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -12883,6 +12883,130 @@ section.horizontal .animation-wrap.to-left {
 .blog-details .blog-flex .comen p {
   font-size: 11px;
 }
+.page-header {
+  display: block;
+  width: 100%;
+  position: relative;
+  padding-top: 20%;
+  background: #EBEBEB;
+  margin-bottom: 150px;
+  z-index: 2;
+}
+.page-header .wrapper-small {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 100px;
+}
+.page-header .wrapper-small .page-title {
+  display: block;
+  float: left;
+  padding: 0 15px;
+}
+.page-header .wrapper-small .page-title h1.big-title {
+  font-size: 90px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100px;
+  margin-left: -7px;
+  margin-top: 20px;
+  font-family: 'NeueHaasDisplay-me';
+  margin-bottom: 69px;
+  padding-right: 10px;
+}
+.page-header .wrapper-small .page-title h1.big-title {
+  margin-bottom: 20px;
+  margin-top: 0;
+  line-height: 20px;
+  font-size: 110px;
+}
+.aw-categories {
+  display: block;
+  margin-bottom: 50px;
+  padding: 0 5%;
+}
+.aw-categories ul.aw-cats li.active {
+  color: #191b1d;
+}
+.aw-categories ul.aw-cats li {
+  display: inline-block;
+  text-decoration: none;
+  color: rgba(25, 27, 29, 0.6);
+  font-size: 30px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  cursor: pointer;
+  font-family: 'NeueHaasDisplay-me';
+}
+.aw-categories ul.aw-cats li.active::after {
+  color: #dbdbdb;
+}
+.aw-categories ul.aw-cats li::after {
+  content: "/";
+  margin: 0 10px;
+}
+ul.aw-cats {
+  padding: 0;
+  list-style: none;
+}
+/**********************/
+/* Full screen search */
+/**********************/
+#search {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: rgba(0, 0, 0, 0.975);
+  height: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  opacity: 0;
+  position: fixed;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  width: 100vw;
+  will-change: transform, opacity;
+  z-index: -1;
+}
+#search:target {
+  height: 100vh !important;
+  opacity: 1;
+  width: 100vw !important;
+  z-index: 2;
+}
+#search:target .close-btn {
+  display: block;
+}
+#cl a:hover {
+  color: #000;
+}
+#searchbox {
+  background: transparent;
+  border: solid #fff;
+  border-width: 0 0 1px 0;
+  color: #fff;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+  font-size: 2rem;
+  height: 2rem;
+  max-width: 50%;
+  outline: 0;
+  padding: 2rem 1rem;
+}
+.close-btn {
+  display: none;
+  color: #fff;
+  font-size: 2rem;
+  position: absolute;
+  top: 0.5rem;
+  right: 2rem;
+  font-family: 'Ageo';
+}
 .author {
   margin-top: 10px !important;
 }
@@ -12963,7 +13087,7 @@ section.horizontal .animation-wrap.to-left {
   margin-top: 9%;
 }
 .recent-post {
-  margin-top: 17%;
+  margin-top: 8%;
   margin-bottom: 8%;
   padding: 0 3%;
 }
