--- a/assets/resources/styles/less/modules/_blog.less
+++ b/assets/resources/styles/less/modules/_blog.less
@@ -560,7 +560,7 @@ ul.aw-cats {
 
 #search {
     align-items: center;
-    background: rgba(0, 0, 0, .975);
+    background: rgba(255, 255, 255, 0.975);
     height: 0;
     display: flex;
     justify-content: center;
@@ -589,20 +589,21 @@ ul.aw-cats {
 
 #searchbox {
     background: transparent;
-    border: solid #fff;
+    border: solid rgb(0, 0, 0);
     border-width: 0 0 1px 0;
-    color: #fff;
+    color: rgb(0, 0, 0);
     flex: 1 0 auto;
     font-size: 2rem;
     height: 2rem;
     max-width: 50%;
     outline: 0;
     padding: 2rem 1rem;
+    font-family: 'Ageo';
 }
 
 .close-btn {
     display: none;
-    color: #fff;
+    color: rgb(0, 0, 0);
     font-size: 2rem;
     position: absolute;
     top: .5rem;
