--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -220,9 +220,26 @@
       animation: gradient 2s ease infinite;
       -webkit-animation-direction: alternate;
       animation-direction: alternate;
+      .arro{
+        img{
+          width: 10px;
+          -webkit-mask-image: linear-gradient(to bottom, transparent 25%, rgb(211, 51, 51) 75%);
+  mask-image: linear-gradient(to bottom, transparent 25%, rgb(191, 29, 29) 75%);
+          margin-left: 10px;
+      
+        }
+      }
+    }
+    
+  }
+  .en-btn_send:hover{
+    .arro{
+      img{
+        transform: rotate(-45deg);
+        transition: all 0.3s ease-in-out;
+      }
     }
   }
-
   .en-btn_send:after {
     background-image: linear-gradient(45deg, dodgerblue, purple, red, dodgerblue);
     background-size: 100% 500%;
@@ -1555,7 +1572,9 @@ section.horizontal .animation-wrap.to-left {
         animation: gradient 2s ease infinite;
         -webkit-animation-direction: alternate;
         animation-direction: alternate;
+        
       }
+      
     }
 
     .en-btn_send:after {
