--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -13446,7 +13446,7 @@ ul.aw-cats {
 @media only screen and (min-width: 1680px) {
   .contact-form-block {
     padding-bottom: 11.31vw;
-    padding-top: 13.83vw;
+    padding-top: 3.83vw;
   }
 }
 .contact-form-block .contact-inner {
@@ -13598,6 +13598,13 @@ ul.aw-cats {
   .contact-inner .gform_wrapper form .gform_body ul li .ginput_container input::placeholder,
   .contact-inner .gform_wrapper form .gform_body ul li .ginput_container textarea::placeholder {
     font-size: 1.19vw;
+  }
+  .lets .flex-row P {
+    text-align: right;
+    font-size: 2em;
+    text-transform: uppercase;
+    padding-left: 42.1%;
+    letter-spacing: 2px;
   }
 }
 .contact-inner .gform_wrapper form .gform_footer input[type="submit"],
@@ -14962,11 +14969,11 @@ body.dark .ar-work-cat,
   }
   .ml-lg-auto,
   .mx-lg-auto {
-    margin-left: auto!important;
+    margin-left: auto !important;
   }
   .mr-lg-auto,
   .mx-lg-auto {
-    margin-right: auto!important;
+    margin-right: auto !important;
   }
 }
 .min-vh--100 {
