--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -95,7 +95,7 @@
 @media only screen and (min-width: 1680px) {
     .contact-form-block {
         padding-bottom: 11.31vw;
-        padding-top: 13.83vw;
+        padding-top: 3.83vw;
     }
 }
 
@@ -232,6 +232,14 @@
     .contact-inner .gform_wrapper form .gform_body ul li .ginput_container input::placeholder,
     .contact-inner .gform_wrapper form .gform_body ul li .ginput_container textarea::placeholder {
         font-size: 1.190vw;
+    }
+
+    .lets .flex-row P {
+        text-align: right;
+        font-size: 2em;
+        text-transform: uppercase;
+        padding-left: 42.1%;
+        letter-spacing: 2px;
     }
 }
 
@@ -1740,73 +1748,95 @@ body.dark .ar-work-cat,
         }
     }
 }
+
 .col-12 {
     -ms-flex: 0 0 100%;
     flex: 0 0 100%;
     max-width: 100%;
 }
+
 .site-footer {
     position: relative;
     padding-top: 50px;
     padding-bottom: 50px;
 }
-@media screen and (min-width: 1200px){
-.site-footer.footer-fixed {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 0 50px;
-    /* z-index: -1; */
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
+
+@media screen and (min-width: 1200px) {
+    .site-footer.footer-fixed {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        padding: 0 50px;
+        /* z-index: -1; */
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+    }
+
+    .site-footer.footer-fixed>.container,
+    .site-footer.footer-fixed>.container-fluid {
+        min-height: 50px;
+    }
+
+    .container,
+    .container-fluid {
+        position: relative;
+    }
 }
-.site-footer.footer-fixed>.container, .site-footer.footer-fixed>.container-fluid {
-    min-height: 50px;
-}
-.container, .container-fluid {
-    position: relative;
-}
-}
-.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl {
+
+.container,
+.container-fluid,
+.container-lg,
+.container-md,
+.container-sm,
+.container-xl {
     width: 100%;
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
 }
+
 @media screen and (min-width: 992px) {
-  .oli-fullpage .oli-section {
-    padding-left: 50px;
-    padding-right: 50px;
-    position: absolute;
-    top: 0;
-    font-family: 'Ageo-SemiBold';
-    z-index: -1;
-    width: 100%;
-  }
-  .col-lg-8 {
-    -ms-flex: 0 0 66.666667%;
-    flex: 0 0 66.666667%;
-    max-width: 66.666667%;
-}
-.ml-lg-auto, .mx-lg-auto {
-    margin-left: auto!important;
-}
-.mr-lg-auto, .mx-lg-auto {
-    margin-right: auto!important;
-}
+    .oli-fullpage .oli-section {
+        padding-left: 50px;
+        padding-right: 50px;
+        position: absolute;
+        top: 0;
+        font-family: 'Ageo-SemiBold';
+        z-index: -1;
+        width: 100%;
+    }
+
+    .col-lg-8 {
+        -ms-flex: 0 0 66.666667%;
+        flex: 0 0 66.666667%;
+        max-width: 66.666667%;
+    }
+
+    .ml-lg-auto,
+    .mx-lg-auto {
+        margin-left: auto !important;
+    }
+
+    .mr-lg-auto,
+    .mx-lg-auto {
+        margin-right: auto !important;
+    }
 }
 
 .min-vh--100 {
-  min-height: 100vh;
+    min-height: 100vh;
 }
-.sub-1{
+
+.sub-1 {
     font-size: 1.3em;
 }
-.main-h{
+
+.main-h {
     margin-bottom: 0;
 }
+
 .social-nav a i {
     font-size: 16px;
 }
