--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -13384,10 +13384,16 @@ ul.aw-cats {
 /************************ contact page css start  ************************/
 /******************************************************************************/
 .lets {
-  margin-top: 12%;
+  margin-top: 0;
   padding: 30px 50px;
   overflow: hidden;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   height: 100vh;
 }
 .lets img {
