--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -339,15 +339,7 @@
     z-index: 0;
 }
 
-@media only screen and (min-width: 1680px) {
 
-    .contact-inner .enform_wrapper form .enform_footer input[type="submit"],
-    .enform_wrapper form .enform_footer #enform_submit_button_2 {
-        width: 7.917vw;
-        height: 7.917vw;
-        font-size: 0.744vw;
-    }
-}
 
 .contact-inner .enform_wrapper form .enform_footer input[type="submit"]:hover,
 .enform_wrapper form .enform_footer #enform_submit_button_2:hover span img {
@@ -365,11 +357,7 @@
     padding: 0px;
 }
 
-@media only screen and (min-width: 1680px) {
-    .contact-inner .enform_wrapper .enform_footer {
-        margin: 5.714vw 0 0;
-    }
-}
+
 
 .contact-inner .enform_wrapper ul.enform_fields li.gfield {
     padding-right: 0px;
@@ -686,13 +674,13 @@
     margin-right: 20%;
 }
 
-@media only screen and (min-width: 1680px) {
-    .contact-left-img ul li h6 {
-        font-size: 1.190vw;
-        line-height: 1.190vw;
-        margin: 0 0 2.679vw;
-    }
-}
+// @media only screen and (min-width: 1680px) {
+//     .contact-left-img ul li h6 {
+//         font-size: 1.190vw;
+//         line-height: 1.190vw;
+//         margin: 0 0 2.679vw;
+//     }
+// }
 
 .contact-left-img ul li p {
     margin: 0px;
@@ -702,13 +690,7 @@
     font-family: 'Ageo-bold';
 }
 
-@media only screen and (min-width: 1680px) {
-    .contact-left-img ul li p {
-        margin: 0px;
-        font-size: 1.19vw;
-        line-height: 1.57vw;
-    }
-}
+
 
 .contact-left-img ul li p a {
     color: #1a1a1a;
