--- a/assets/resources/styles/less/modules/_hero-section.less
+++ b/assets/resources/styles/less/modules/_hero-section.less
@@ -565,6 +565,12 @@
     }
 }
 
+@media only screen and (min-width: 1680px) {
+    .container_hero_content .small_heading {
+        font-size: 1.4em;
+    }
+}
+
 @media only screen and (max-device-width: 1440px) {
     .tablet_container .macbook_frame_2_evolves_mask_logo .macbook_frame_2_evolves_mask_logo_path {
         transform: scale(8) translateX(-22vw) translateY(-37vh);
