--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -220,26 +220,29 @@
       animation: gradient 2s ease infinite;
       -webkit-animation-direction: alternate;
       animation-direction: alternate;
-      .arro{
-        img{
+
+      .arro {
+        img {
           width: 10px;
           -webkit-mask-image: linear-gradient(to bottom, transparent 25%, rgb(211, 51, 51) 75%);
-  mask-image: linear-gradient(to bottom, transparent 25%, rgb(191, 29, 29) 75%);
+          mask-image: linear-gradient(to bottom, transparent 25%, rgb(191, 29, 29) 75%);
           margin-left: 10px;
-      
+
         }
       }
     }
-    
+
   }
-  .en-btn_send:hover{
-    .arro{
-      img{
+
+  .en-btn_send:hover {
+    .arro {
+      img {
         transform: rotate(-45deg);
         transition: all 0.3s ease-in-out;
       }
     }
   }
+
   .en-btn_send:after {
     background-image: linear-gradient(45deg, dodgerblue, purple, red, dodgerblue);
     background-size: 100% 500%;
@@ -1572,9 +1575,9 @@ section.horizontal .animation-wrap.to-left {
         animation: gradient 2s ease infinite;
         -webkit-animation-direction: alternate;
         animation-direction: alternate;
-        
+
       }
-      
+
     }
 
     .en-btn_send:after {
@@ -1607,6 +1610,10 @@ section.horizontal .animation-wrap.to-left {
   .services-s .image {
     width: 46%;
     /* height: 940px; */
+  }
+
+  .ser-hero .top-h .h1-r6 {
+    margin-left: 16%;
   }
 
   .services-s .content-p {
