--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -253,6 +253,18 @@
     }
 }
 
+.success {
+    display: none;
+    background: #E1F8ED;
+    padding: 20px;
+    margin-top: 16px;
+    margin-bottom: 16px;
+
+    &.is-active {
+        display: block;
+    }
+}
+
 .contact-inner .enform_wrapper form .enform_footer input[type="submit"],
 .enform_wrapper form .enform_footer #enform_submit_button_2 {
 
