--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -13668,6 +13668,16 @@ ul.aw-cats {
     letter-spacing: 2px;
   }
 }
+.success {
+  display: none;
+  background: #E1F8ED;
+  padding: 20px;
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+.success.is-active {
+  display: block;
+}
 .contact-inner .enform_wrapper form .enform_footer input[type="submit"],
 .enform_wrapper form .enform_footer #enform_submit_button_2 {
   font-size: 18px;
