--- a/assets/resources/styles/less/modules/_blog.less
+++ b/assets/resources/styles/less/modules/_blog.less
@@ -613,10 +613,13 @@ ul.aw-cats {
 
 .author {
     margin-top: 10px !important;
+    display: flex;
+    align-items: center;
 
     img {
-        width: 38px;
-        margin-right: 10px;
+        width: 29px;
+        margin-right: 6px;
+        margin-left: 20px;
     }
 }
 
@@ -729,6 +732,11 @@ ul.aw-cats {
         margin-top: 10px !important;
         width: 100% !important;
         padding-left: 0 !important;
+        display: flex;
+    align-items: center;
+    img{
+        margin-left: 20px;
+    }
     }
 
     .pr-list {
@@ -753,7 +761,7 @@ ul.aw-cats {
         overflow: hidden;
     }
 
-    a {
+    .rec {
         width: 50%;
         padding-left: 20px;
     }
@@ -1027,6 +1035,7 @@ ul.aw-cats {
             z-index: 4;
             margin-top:
                 30px;
+                
         }
 
         .p-prj-caption-name {
