--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -3546,12 +3546,14 @@
 
 
     .c-hm-us_top {
-        padding-top: 1.6em;
+        padding-top: 2.6em;
+        height: 100vh;
+        padding-bottom: 2.6em;
     }
 
     .c-hm-us_s2 {
-        padding-top: 13em;
-        padding-bottom: 13em;
+        padding-top: 0em;
+        padding-bottom: 0em;
     }
 
     .home-sec {
