--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -7762,11 +7762,13 @@ header {
     margin-top: 5%;
   }
   .c-hm-us_top {
-    padding-top: 1.6em;
+    padding-top: 2.6em;
+    height: 100vh;
+    padding-bottom: 2.6em;
   }
   .c-hm-us_s2 {
-    padding-top: 13em;
-    padding-bottom: 13em;
+    padding-top: 0em;
+    padding-bottom: 0em;
   }
   .home-sec .about-us-content {
     margin-left: 30px;
