--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -3546,9 +3546,9 @@
 
 
     .c-hm-us_top {
-        padding-top: 2.6em;
-        height: 100vh;
-        padding-bottom: 2.6em;
+        padding-top: 4.6em;
+        height: 93vh;
+        padding-bottom: 0;
     }
 
     .c-hm-us_s2 {
