--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -7762,9 +7762,9 @@ header {
     margin-top: 5%;
   }
   .c-hm-us_top {
-    padding-top: 2.6em;
-    height: 100vh;
-    padding-bottom: 2.6em;
+    padding-top: 4.6em;
+    height: 93vh;
+    padding-bottom: 0;
   }
   .c-hm-us_s2 {
     padding-top: 0em;
