--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -3554,6 +3554,7 @@
     .c-hm-us_s2 {
         padding-top: 0em;
         padding-bottom: 0em;
+        justify-content: center;
     }
 
     .home-sec {
