--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -3594,12 +3594,15 @@
     }
 
     .c-hm-us_top {
-        padding-top: 1.6em;
+        padding-top: 4.6em;
+        height: 93vh;
+        padding-bottom: 0;
     }
 
     .c-hm-us_s2 {
-        padding-top: 10em;
-        padding-bottom: 10em;
+        padding-top: 0em;
+        padding-bottom: 0em;
+        justify-content: center;
     }
 }
 
