--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -3604,6 +3604,9 @@
         padding-bottom: 0em;
         justify-content: center;
     }
+    .container_hero_content .small_heading {
+        font-size: 1.2em;
+    }
 }
 
 @media screen and (max-width:1280px) {
