--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -591,6 +591,7 @@ button:hover .button-text {
   html,
   body {
     overscroll-behavior-x: none;
+    background: #fff;
   }
 }
 .container {
@@ -7807,6 +7808,9 @@ header {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+  }
+  .container_hero_content .small_heading {
+    font-size: 1.2em;
   }
 }
 @media screen and (max-width: 1280px) {
